Changelog]. We follow https://semver.org/spec/v2.0.0.html[semver], but since
we're in 0.x it's a lawless land anyway.

Points under "unreleased" currently exist on main and will be part of the next
release.

Unreleased
----------

Added
~~~~~

Changed
~~~~~~~

Fixed
~~~~~

Other
~~~~~

 * Instead of four crates we now have only two. mumd and mumctl were merged
 * into mum as binary targets.

0.4.0 - 2021-06-19
------------------

Added
~~~~~

 * Added a noise gate.
 * Added tunneling audio through TCP if UDP connection goes down.
 * --version now includes the current commit hash.
 * Server passwords. Thanks @rbran!
 * Added support for sending and receiving text messages.
 * See a list of occured events with +mumctl events+.
 * Invalid server certificates are now rejected by default and need to be
   explicitly allowed either when connecting or permanently per server or
   globally.
 * .ogg sound effects.

Changed
~~~~~~~

 * Changed how you mute yourself/others. See man pages for details on the new options.
 * The current channel status is now printed when connecting to a server.

Fixed
~~~~~

 * Client no longer sends empty audio packets.
 * Informative error message instead of panic when a running mumd-process can't
   be found.
 * Lots of other minor informative error messages instead of panics.
 * Status requests are sent in parallel.
 * Pings are now less spammy in the log output.
 * Sound output is stereo by default.

Other
~~~~~

 * Updated to tokio 1.0.
 * Cleaned up dependencies

0.3.1 - 2021-04-08
------------------

Fixed
~~~~~

 * Compilation no longer fails with "module export is private".

0.3.0 - 2020-12-25
------------------

Added
~~~~~

 * Published to crates.io. You can now install with +cargo install {mumctl,mumd}+!
 * Support for macOS.
 * Notifications via libnotify (behind a feature-gate).
 * List configured servers, if they're online and how many users are
   connected with +mumctl status+.