@@ -18,7 +18,7 @@ notifications = ["libnotify"]
 ogg = ["lewton"]
 
 [dependencies]
-mumlib = { version = "0.4", path = "../mumlib" }
+mumlib = { version = "0.5.0", path = "../mumlib" }
 
 bincode = "1.3.3"
 bytes = "1.1.0"
